@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'PHP debugger, sys_log and devLog Logger',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '0.5.7',
+	'version' => '0.5.8',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
