@@ -1,3 +1,6 @@
+2017-04-11  Franz Holzinger  <franz@ttproducts.de>
+    * new feature: Use a XCLASS for the TYPO3 7.x class ExtDirectRouter which overwrites the global ERROR object. Use the fh_debug error object instead.
+
 2017-04-10  Franz Holzinger  <franz@ttproducts.de>
     * works with TYPO3 8.x
     * add a composer.json file
